# another_pgp_tool

./: Cargo.toml  Dioxus.toml  README.md  build.rs
.github/workflows/: build.yaml
assets/: main.css
icons/: icon.icns
src/: main.rs
