[package]
name = "another_pgp_tool"
version = "0.1.0"
authors = ["Petr Gadorek <hahihula@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
pgp-lib = { git = "https://github.com/Hahihula/pimalaya_core.git", branch = "read_pkey_from_string" }
getrandom = { version = "0.2.15", features = ["js"] }
base64 = "0.22.1"
image = "0.25.6"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "another_pgp_tool"  # Replace with your actual binary name
path = "src/main.rs"
windows_subsystem = "windows"  # This is the key setting that prevents the console window

[package.metadata.bundle]
name = "another_pgp_tool"
identifier = "com.hahihula.another_pgp_tool"
icon = ["icons/icon.png"]
version = "1.0.0"
resources = []
copyright = "Copyright (c) Hahihula 2025. All rights reserved."

[[package.metadata.bundle.targets]]
name = "windows"
subsystem = "windows"
